# vail-verifier-extension

./: Cargo.toml  README.md  build.sh  manifest_v2.json  manifest_v3.json
src/: lib.rs
web/: artifact_worker.js
