[package]
name = "vail-verifier-extension"
version = "0.1.0"
authors = ["mnshah"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
zkml = { git = "https://github.com/kobigurk/zkml", branch="kobigurk/wav-for-browser"}
halo2 = { git="https://github.com/kobigurk/halo2", package="halo2", rev="53153637fe3bb3e8f897cfcf174707cb48c72a42" }
halo2_gadgets = { git="https://github.com/kobigurk/halo2", package="halo2_gadgets", rev="53153637fe3bb3e8f897cfcf174707cb48c72a42", features = ["circuit-params"] }
halo2_proofs = { git="https://github.com/kobigurk/halo2", package="halo2_proofs", rev="53153637fe3bb3e8f897cfcf174707cb48c72a42", features = ["circuit-params"] }

rmp-serde = "1.1.1"
rounded-div = "0.1.2"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.85"
serde_bytes = "0.11.5"
serde-wasm-bindgen = "0.6.0"
wav = "1.0.0"
hex = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Worker",
    "Headers"
]